--- a/dai/data.yml
+++ b/dai/data.yml
@@ -1,3 +1,4 @@
+---
 name: DAI
 description: Dai is a stable, decentralized currency that does not discriminate.
   Any individual or business can realize the advantages of digital money.
@@ -75,7 +76,7 @@ details:
       continued decentralization.
   - title: Roadmap
     value: |
-      On May 12, 2023, MakerDAO announced the release of a five-phase roadmap for the project. Per a forum post by Rune Christensen, 
+      On May 12, 2023, MakerDAO announced the release of a five-phase roadmap for the project. Per a forum post by Rune Christensen,
       the new roadmap, dubbed "Endgame" will be rolled out as follows:
       <br /><br />
       * Phase One (Beta Launch) - This phase will introduce a full rebrand of the project, establishing a unified brand for DAI and
@@ -124,7 +125,7 @@ team:
     linkedin: https://www.linkedin.com/in/doo-wan-nam-b8943443
 
 social_media:
-  twitter: # [Last Week, 2 Weeks Ago, 3 Weeks Ago]
+  twitter:   # [Last Week, 2 Weeks Ago, 3 Weeks Ago]
     - title: Tweets
       value: [5, 9, 2]
     - title: Views
@@ -155,7 +156,7 @@ financial_analysis:
   market_capitalization_and_liquidity:
     - title: Dollar volume (24H)
       value: $238,544,833.18
-    - title: Market cap	Rank
+    - title: Market cap Rank
       value: 23 ($4,888,486,141.03)
     - title: FDV
       value: $4,888,486,141.03
@@ -266,7 +267,7 @@ security_and_compliance:
           Since the launch of the program, three high-severity bugs and one critical-severity bug have been discovered,
           resulting in bounty reward payments totaling $90,000. https://security.makerdao.com/bug-bounty-program
       - title: Insurance Coverage
-        value: No
+        value: "No"
       - title: Security Issue History
         value: No security breaches. No fund losses. Critical vulnerability was found and fixed in 2019.
       - title: Resolution of Past Incidents
@@ -347,7 +348,7 @@ security_and_compliance:
           MakerDAO has approved the creation of a new 5m fund dedicated to expenses related to legal defense.
           https://cointelegraph.com/news/maker-dao-launches-5m-legal-defense-fund
       - title: External Compliance Audits
-        value: No
+        value: "No"
       - title: Operational Compliance
         value: |
           The operation of MakerDAO relies on the principles of decentralization, with mechanisms such as automated trading bots (Keepers)
