--- a/pyusd/data.yml
+++ b/pyusd/data.yml
@@ -1,3 +1,4 @@
+---
 name: PyUSD
 description: PayPal USD is designed to maintain a stable $1 USD value. It’s backed by dollar deposits, US treasuries, and cash equivalents.
 logo: assets/logo.png
@@ -19,7 +20,7 @@ details:
   - title: Backing Assets
     value: |
       1.U.S dollars
-      2.U.S Treasuries 
+      2.U.S Treasuries
       3.cash equivalents
 
   - title: History
@@ -34,24 +35,8 @@ team:
     title: Former President and CEO of PayPal
     twitter: https://twitter.com/Dan_Schulman
     linkedin: https://www.linkedin.com/in/dan-schulman/
-  # - avatar:
-  #   name:
-  #   title:
-  #   twitter:
-  #   linkedin:
 
 social_media:
-  # twitter: # [Last Week, 2 Weeks Ago, 3 Weeks Ago]
-  #   - title: Tweets
-  #     value: [
-  #   - title: Views
-  #     value: [41.54K/8.31K, 87.27K/9.70K, 18.03K/9.01K]
-  #   - title: Likes
-  #     value: [175/35, 401/44, 165/82]
-  #   - title: Comments
-  #     value: [22/4, 62/6, 13/6]
-  #   - title: Shares
-  #     value: [42/8, 90/10, 81/40]
 
 financial_analysis:
   financial_audit:
@@ -93,17 +78,7 @@ financial_analysis:
     - title: Risks of depegging
       value: Minimum
   investments:
-    # - round: "-"
-    #   amount:
-    #   valuation: "-"
-    #   date:
-    #   investors: |
-    #     * Andreessen Horowitz
-    #     * Polychain
-    #     * FBG Capital
   list_of_investors:
-    # - name: 1confirmation
-    #   logo: assets/1confirmation.jpg
 
 security_and_compliance:
   - title: Security Assurance
@@ -117,7 +92,7 @@ security_and_compliance:
       - title: Bug Bounty Programs
         value:
       - title: Insurance Coverage
-        value: No
+        value: "No"
       - title: Security Issue History
         value:
       - title: Resolution of Past Incidents
