--- a/usdc/data.yml
+++ b/usdc/data.yml
@@ -1,3 +1,4 @@
+---
 name: USDC
 description:
   USDC is a fully regulated dollar digital stablecoin launched by Circle and Coinbase.
@@ -66,7 +67,7 @@ details:
       offering by introducing features such as the following: <br />
       Postman Collection: Developers can test features and experiment with Programmable Wallets on testnets. <br />
       Smart Contract Platform: Developers can integrate and manage smart contracts to allow for app features such as
-      decentralized finance (DeFi) integrations, programmatic USDC transactions, NFTs, onchain loyalty programs, 
+      decentralized finance (DeFi) integrations, programmatic USDC transactions, NFTs, onchain loyalty programs,
       CCTP integration, etc. <br />
       Gas Station: Developers can abstract away gas fees for end-users by sponsoring the fees. This ability can be subject
       to customized restrictions on the value of transactions, limits on gas used, etc. <br />
@@ -99,7 +100,7 @@ team:
     linkedin: https://www.linkedin.com/in/dantedisparte
 
 social_media:
-  twitter: # [Last Week, 2 Weeks Ago, 3 Weeks Ago]
+  twitter:   # [Last Week, 2 Weeks Ago, 3 Weeks Ago]
     - title: Tweets
       value: [6, 5, 36]
     - title: Views
@@ -158,14 +159,7 @@ financial_analysis:
     - title: Risks of depegging
       value: Minimum
   investments:
-    # - round: "-"
-    #   amount: "-"
-    #   valuation: "-"
-    #   date: "-"
-    #   investors: "-"
   list_of_investors:
-    # - name: "-"
-    #   logo: "-"
 
 security_and_compliance:
   - title: Security Assurance
@@ -179,9 +173,9 @@ security_and_compliance:
       - title: Bug Bounty Programs
         value:
       - title: Insurance Coverage
-        value: No
+        value: "No"
       - title: Security Issue History
-        value: No
+        value: "No"
       - title: Resolution of Past Incidents
         value: N.A.
       - title: Multi-Signature Wallets
