--- a/usdp/data.yml
+++ b/usdp/data.yml
@@ -1,3 +1,4 @@
+---
 name: USDP
 description: Pax Dollar (USDP) is a USD-backed stablecoin regulated by NYDFS, offering fast, secure crypto transactions with 1:1 parity to the US dollar.
 logo: assets/logo.png
@@ -5,8 +6,7 @@ rating: A-
 links:
   website: https://paxos.com/usdp/
   twitter: https://twitter.com/PaxosStandard
-whitepaper: 
-  https://standard.paxos.com/whitepaper.pdf
+whitepaper: https://standard.paxos.com/whitepaper.pdf
 overview: |
   Paxos Standard is a fiat-collateralized stablecoin. The Paxos Standard tokens (PAX) are issued as ERC-20 tokens on the Ethereum blockchain and are collateralized 1:1 by USD held in Paxos-owned US bank accounts. It is also the one of three stablecoins approved by Wall Street regulators, alongside GUSD and BUSD.
 details:
@@ -40,37 +40,8 @@ team:
     name: Charles Cascarilla
     title: Co-founder and CEO of Paxos
     linkedin: https://www.linkedin.com/in/charlescascarilla/
-  # - avatar:
-  #   name: Diana Bushard
-  #   title: General Counsel at Archblock
-  #   linkedin: https://www.linkedin.com/in/diana-bushard-21ab461/
-  # - avatar:
-  #   name: Rafael Cosman
-  #   title: Co-Founder and Board Member of Archblock
-  #   twitter: https://twitter.com/RafaelCosman
-  #   linkedin: https://www.linkedin.com/in/rafaelcosman/
-  # - avatar:
-  #   name: Ryan Christensen
-  #   title: Board Member of Archblock
-  #   linkedin: https://www.linkedin.com/in/ryanechristensen/
-  # # - avatar:
-  # #   name:
-  # #   title:
-  # #   twitter:
-  # #   linkedin:
 
 social_media:
-  # twitter: # [Last Week, 2 Weeks Ago, 3 Weeks Ago]
-  #   - title: Tweets
-  #     value: [
-  #   - title: Views
-  #     value: [41.54K/8.31K, 87.27K/9.70K, 18.03K/9.01K]
-  #   - title: Likes
-  #     value: [175/35, 401/44, 165/82]
-  #   - title: Comments
-  #     value: [22/4, 62/6, 13/6]
-  #   - title: Shares
-  #     value: [42/8, 90/10, 81/40]
 
 financial_analysis:
   financial_audit:
@@ -112,17 +83,7 @@ financial_analysis:
     - title: Risks of depegging
       value: Minimum
   investments:
-    # - round: "-"
-    #   amount:
-    #   valuation: "-"
-    #   date:
-    #   investors: |
-    #     * Andreessen Horowitz
-    #     * Polychain
-    #     * FBG Capital
   list_of_investors:
-    # - name: 1confirmation
-    #   logo: assets/1confirmation.jpg
 
 security_and_compliance:
   - title: Security Assurance
@@ -136,7 +97,7 @@ security_and_compliance:
       - title: Bug Bounty Programs
         value:
       - title: Insurance Coverage
-        value: No
+        value: "No"
       - title: Security Issue History
         value:
       - title: Resolution of Past Incidents
@@ -252,4 +213,3 @@ security_and_compliance:
       - title: Accountability Mechanisms
         value: |
           Paxos ensures accountability through regulatory compliance, reserve transparency, and consumer protection measures under New York banking law. In the event of insolvency, customer assets are protected and segregated​​.
-          
