--- a/usdt/data.yml
+++ b/usdt/data.yml
@@ -1,3 +1,4 @@
+---
 name: USDT
 description: USDT, also known as Tether, is the stablecoin with the highest
   market capitalization, backed by US dollar.
@@ -74,7 +75,7 @@ team:
     linkedin: https://www.linkedin.com/in/paolo-ardoino-36245b42
 
 social_media:
-  twitter: # [Last Week, 2 Weeks Ago, 3 Weeks Ago]
+  twitter:   # [Last Week, 2 Weeks Ago, 3 Weeks Ago]
     - title: Tweets
       value: [3, 1, 3]
     - title: Views
@@ -136,14 +137,7 @@ financial_analysis:
     - title: Risks of depegging
       value: Minimum
   investments:
-    # - round: "-"
-    #   amount: "-"
-    #   valuation: "-"
-    #   date: "-"
-    #   investors: "-"
   list_of_investors:
-    # - name: "-"
-    #   logo: "-"
 
 security_and_compliance:
   - title: Security Assurance
@@ -157,9 +151,9 @@ security_and_compliance:
       - title: Bug Bounty Programs
         value:
       - title: Insurance Coverage
-        value: No
+        value: "No"
       - title: Security Issue History
-        value: No
+        value: "No"
       - title: Resolution of Past Incidents
         value: N.A.
       - title: Multi-Signature Wallets
