--- a/fdusd/data.yml
+++ b/fdusd/data.yml
@@ -1,3 +1,4 @@
+---
 name: FDUSD
 description: First Digital USD (FDUSD) is a US dollar-pegged stablecoin aiming for stability, programmability, and compliance with regulations, backed by cash and cash equivalents..
 logo: assets/logo.png
@@ -25,33 +26,8 @@ details:
       3.Cash
 
 team:
-  # - avatar:
-  #   name:
-  #   title:
-  #   twitter:
-  #   linkedin:
-  # - avatar:
-  #   name:
-  #   title:
-  #   twitter:
-  # - avatar:
-  #   name:
-  #   title:
-  #   twitter:
-  #   linkedin:
 
 social_media:
-  # twitter: # [Last Week, 2 Weeks Ago, 3 Weeks Ago]
-  #   - title: Tweets
-  #     value: [
-  #   - title: Views
-  #     value: [41.54K/8.31K, 87.27K/9.70K, 18.03K/9.01K]
-  #   - title: Likes
-  #     value: [175/35, 401/44, 165/82]
-  #   - title: Comments
-  #     value: [22/4, 62/6, 13/6]
-  #   - title: Shares
-  #     value: [42/8, 90/10, 81/40]
 
 financial_analysis:
   financial_audit:
@@ -97,17 +73,7 @@ financial_analysis:
     - title: Risks of depegging
       value: Minimum
   investments:
-    # - round: "-"
-    #   amount:
-    #   valuation: "-"
-    #   date:
-    #   investors: |
-    #     * Andreessen Horowitz
-    #     * Polychain
-    #     * FBG Capital
   list_of_investors:
-    # - name: 1confirmation
-    #   logo: assets/1confirmation.jpg
 
 security_and_compliance:
   - title: Security Assurance
@@ -121,7 +87,7 @@ security_and_compliance:
       - title: Bug Bounty Programs
         value:
       - title: Insurance Coverage
-        value: No
+        value: "No"
       - title: Security Issue History
         value:
       - title: Resolution of Past Incidents
