--- a/frax/data.yml
+++ b/frax/data.yml
@@ -1,3 +1,4 @@
+---
 name: FRAX
 description: FRAX is a unique stablecoin ecosystem using both algorithms and collateralization to maintain a near-peg to the US dollar while offering flexible pegging options and governance through its FXS token
 logo: assets/logo.png
@@ -47,24 +48,8 @@ team:
     name: Sam Kazemian
     title: Founder of Frax Finance and Co-Founder of Everipedia
     twitter: https://twitter.com/samkazemian
-  # - avatar:
-  #   name:
-  #   title:
-  #   twitter:
-  #   linkedin:
 
 social_media:
-  # twitter: # [Last Week, 2 Weeks Ago, 3 Weeks Ago]
-  #   - title: Tweets
-  #     value: [
-  #   - title: Views
-  #     value: [41.54K/8.31K, 87.27K/9.70K, 18.03K/9.01K]
-  #   - title: Likes
-  #     value: [175/35, 401/44, 165/82]
-  #   - title: Comments
-  #     value: [22/4, 62/6, 13/6]
-  #   - title: Shares
-  #     value: [42/8, 90/10, 81/40]
 
 financial_analysis:
   financial_audit:
@@ -108,17 +93,7 @@ financial_analysis:
     - title: Risks of depegging
       value: Minimum
   investments:
-    # - round: "-"
-    #   amount:
-    #   valuation: "-"
-    #   date:
-    #   investors: |
-    #     * Andreessen Horowitz
-    #     * Polychain
-    #     * FBG Capital
   list_of_investors:
-    # - name: 1confirmation
-    #   logo: assets/1confirmation.jpg
 
 security_and_compliance:
   - title: Security Assurance
@@ -132,7 +107,7 @@ security_and_compliance:
       - title: Bug Bounty Programs
         value:
       - title: Insurance Coverage
-        value: No
+        value: "No"
       - title: Security Issue History
         value:
       - title: Resolution of Past Incidents
