--- a/usdn/data.yml
+++ b/usdn/data.yml
@@ -1,3 +1,4 @@
+---
 name: USDN
 description: Neutrino USD now XTN is an algorithmic crypto-collateralized indexcoin backed by three Waves Ecosystem tokens WAVES, WX and VIRES.
 logo: assets/logo.png
@@ -19,50 +20,12 @@ details:
   - title: Backing Assets
     value: |
       1. WAVES
-      2. WX 
+      2. WX
       3. VIRES
 
 team:
-  # - avatar:
-  #   name: Alex de Lorraine
-  #   title: CEO at Archblock and MD of TrueCurrencies (TUSD)
-  #   twitter: https://twitter.com/alexdelorraine
-  #   linkedin: https://www.linkedin.com/in/alexdelorraine/
-  # - avatar:
-  #   name: Bill Wolf
-  #   title: Chief Investment Officer at Archblock
-  #   linkedin: https://www.linkedin.com/in/bill-wolf-5015a343/
-  # - avatar:
-  #   name: Diana Bushard
-  #   title: General Counsel at Archblock
-  #   linkedin: https://www.linkedin.com/in/diana-bushard-21ab461/
-  # - avatar:
-  #   name: Rafael Cosman
-  #   title: Co-Founder and Board Member of Archblock
-  #   twitter: https://twitter.com/RafaelCosman
-  #   linkedin: https://www.linkedin.com/in/rafaelcosman/
-  # - avatar:
-  #   name: Ryan Christensen
-  #   title: Board Member of Archblock
-  #   linkedin: https://www.linkedin.com/in/ryanechristensen/
-  # # - avatar:
-  # #   name:
-  # #   title:
-  # #   twitter:
-  # #   linkedin:
 
 social_media:
-  # twitter: # [Last Week, 2 Weeks Ago, 3 Weeks Ago]
-  #   - title: Tweets
-  #     value: [
-  #   - title: Views
-  #     value: [41.54K/8.31K, 87.27K/9.70K, 18.03K/9.01K]
-  #   - title: Likes
-  #     value: [175/35, 401/44, 165/82]
-  #   - title: Comments
-  #     value: [22/4, 62/6, 13/6]
-  #   - title: Shares
-  #     value: [42/8, 90/10, 81/40]
 
 financial_analysis:
   financial_audit:
@@ -70,12 +33,6 @@ financial_analysis:
     score: N.A.
     analysis: N.A.
     reserve_holdings_percentage:
-      # - title: US Treasury Bills
-      #   value: 751913076.50
-      # - title: Fill digital trust limited
-      #   value: 501850000.00
-      # - title: Us dollar cash
-      #   value: 40780014.51
   market_capitalization_and_liquidity:
     - title: Dollar volume (24H)
       value:
@@ -106,17 +63,7 @@ financial_analysis:
     - title: Risks of depegging
       value: Minimum
   investments:
-    # - round: "-"
-    #   amount:
-    #   valuation: "-"
-    #   date:
-    #   investors: |
-    #     * Andreessen Horowitz
-    #     * Polychain
-    #     * FBG Capital
   list_of_investors:
-    # - name: 1confirmation
-    #   logo: assets/1confirmation.jpg
 
 security_and_compliance:
   - title: Security Assurance
@@ -130,7 +77,7 @@ security_and_compliance:
       - title: Bug Bounty Programs
         value:
       - title: Insurance Coverage
-        value: No
+        value: "No"
       - title: Security Issue History
         value:
       - title: Resolution of Past Incidents
