fix yaml format

--- a/ust/data.yml
+++ b/ust/data.yml
@@ -4,12 +4,8 @@ description: TerraUSD (UST)  is the decentralized and algorithmic stablecoin of 
 logo: assets/logo.png
 rating: A-
 links:
-  - name: Website
-    url: https://www.terra.money
-  - name: Twitter
-    url: https://twitter.com/ethena_labs
-  - name: LinkedIn
-    url:
+  website: https://www.terra.money
+  twitter: https://twitter.com/ethena_labs
 whitepaper: https://assets.website-files.com/611153e7af981472d8da199c/618b02d13e938ae1f8ad1e45_Terra_White_paper.pdf
 overview: |
   TerraUSD (UST) is an algorithmic stablecoin within the Terra ecosystem which aims to maintain a peg to the US Dollar. UST aims to achieve stability through an elastic supply mechanism enabled by the Terra blockchain's native token, Luna, which is minted or sold based on the demand preferences of the UST token. Due to a significant price reduction in the in the LUNA token, has been unable to maintain its peg to the U.S. Dollar.
