--- a/xsgd/data.yml
+++ b/xsgd/data.yml
@@ -4,12 +4,8 @@ description: The XSGD token is a stablecoin pegged to the Singapore Dollar (SGD)
 logo: assets/logo.png
 rating: A-
 links:
-  - name: Website
-    url: https://www.straitsx.com/xsgd
-  - name: Twitter
-    url: https://twitter.com/StraitsX
-  - name: LinkedIn
-    url:
+  website: https://www.straitsx.com/xsgd
+  twitter: https://twitter.com/StraitsX
 whitepaper: https://docs.straitsx.com/docs/introduction
 overview: |
   The XSGD token is a stablecoin issued by the StraitsX project and pegged 1:1 to the Singapore Dollar. As an on-chain representation of the Singapore Dollar, XSGD enables its users to access decentralized applications on supported networks.
