testing for ust scv

--- a/.github/workflows/workflow-test.yml
+++ b/.github/workflows/workflow-test.yml
@@ -64,15 +64,16 @@ jobs:
       - name: Run pyinsightic SosoValue analysis for the first project directory
         run: |
           for dir in */ ; do
-          if [ -f "${dir}data.yml" ]; then
-              echo "Processing folder: $dir"
-              export PYTHONPATH="$PYTHONPATH:$(pwd)"
-              python -c "import pyinsightic; analysis=pyinsightic.SosoValue(project_dir='$dir');analysis.run_analysis()"
-              python -c "import pyinsightic; analysis=pyinsightic.Linkedin(project_dir='$dir');analysis.run_analysis()"
-              python -c "import pyinsightic; analysis=pyinsightic.Twitter(project_dir='$dir');analysis.run_analysis()"
-              python -c "import pyinsightic; analysis=pyinsightic.SmartContractValidator(project_dir='$dir');analysis.run()"
-              echo "Analysis completed for $dir"
-          fi
+          if [ "$dir" = "ust/" ]; then
+            if [ -f "${dir}data.yml" ]; then
+                echo "Processing folder: $dir"
+                export PYTHONPATH="$PYTHONPATH:$(pwd)"
+                python -c "import pyinsightic; analysis=pyinsightic.SosoValue(project_dir='$dir');analysis.run_analysis()"
+                python -c "import pyinsightic; analysis=pyinsightic.Linkedin(project_dir='$dir');analysis.run_analysis()"
+                python -c "import pyinsightic; analysis=pyinsightic.Twitter(project_dir='$dir');analysis.run_analysis()"
+                python -c "import pyinsightic; analysis=pyinsightic.SmartContractValidator(project_dir='$dir');analysis.run()"
+                echo "Analysis completed for $dir"
+            fi
           done
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
