--- a/.github/workflows/workflow-test.yml
+++ b/.github/workflows/workflow-test.yml
@@ -63,6 +63,7 @@ jobs:
       - name: Run pyinsightic SosoValue analysis for the first project directory
         run: |
           for dir in */ ; do
+          if [ "$dir" = "xsgd/" ]; then
             if [ -f "${dir}data.yml" ]; then
                 echo "Processing folder: $dir"
                 export PYTHONPATH="$PYTHONPATH:$(pwd)"
@@ -70,14 +71,18 @@ jobs:
                 python -c "import pyinsightic; analysis=pyinsightic.Linkedin(project_dir='$dir');analysis.run_analysis()"
                 python -c "import pyinsightic; analysis=pyinsightic.Twitter(project_dir='$dir');analysis.run_analysis()"
                 python -c "import pyinsightic; analysis=pyinsightic.SmartContractValidator(project_dir='$dir');analysis.run()"
+                python -c "import pyinsightic; analysis=pyinsightic.Stablecoin(project_dir='$dir');analysis.run()"
                 echo "Analysis completed for $dir"
             fi
+          fi
           done
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
+          DUNE_API_KEY: ${{ secrets.DUNE_API_KEY }}
+          ETHERSCAN_API_KEY: ${{ secrets.ETHERSCAN_API_KEY }}
 
       - name: Commit and Push results
         run: |
@@ -87,5 +92,6 @@ jobs:
           git add */linkedin.json
           git add */twitter.json
           git add */scv_results.json
+          git add */stablecoin_results.json
           git commit -m "Update social analysis results"
           git push
