--- a/.github/workflows/workflow-test.yml
+++ b/.github/workflows/workflow-test.yml
@@ -63,17 +63,15 @@ jobs:
       - name: Run pyinsightic SosoValue analysis for the first project directory
         run: |
           for dir in */ ; do
-          if [ "$dir" = "xsgd/" ]; then
-            if [ -f "${dir}data.yml" ]; then
-                echo "Processing folder: $dir"
-                export PYTHONPATH="$PYTHONPATH:$(pwd)"
-                # python -c "import pyinsightic; analysis=pyinsightic.SosoValue(project_dir='$dir');analysis.run_analysis()"
-                # python -c "import pyinsightic; analysis=pyinsightic.Linkedin(project_dir='$dir');analysis.run_analysis()"
-                # python -c "import pyinsightic; analysis=pyinsightic.Twitter(project_dir='$dir');analysis.run_analysis()"
-                # python -c "import pyinsightic; analysis=pyinsightic.SmartContractValidator(project_dir='$dir');analysis.run_analysis()"
-                python -c "import pyinsightic; analysis=pyinsightic.Stablecoin(project_dir='$dir');analysis.run_analysis()"
-                echo "Analysis completed for $dir"
-            fi
+          if [ -f "${dir}data.yml" ]; then
+              echo "Processing folder: $dir"
+              export PYTHONPATH="$PYTHONPATH:$(pwd)"
+              python -c "import pyinsightic; analysis=pyinsightic.SosoValue(project_dir='$dir');analysis.run_analysis()"
+              python -c "import pyinsightic; analysis=pyinsightic.Linkedin(project_dir='$dir');analysis.run_analysis()"
+              python -c "import pyinsightic; analysis=pyinsightic.Twitter(project_dir='$dir');analysis.run_analysis()"
+              python -c "import pyinsightic; analysis=pyinsightic.SmartContractValidator(project_dir='$dir');analysis.run_analysis()"
+              python -c "import pyinsightic; analysis=pyinsightic.Stablecoin(project_dir='$dir');analysis.run_analysis()"
+              echo "Analysis completed for $dir"
           fi
           done
         env:
