--- a/.github/workflows/workflow-test.yml
+++ b/.github/workflows/workflow-test.yml
@@ -86,10 +86,15 @@ jobs:
         run: |
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "GitHub Actions"
+          # Add the results and check if there are changes; if so, commit them.
           git add */sosovalue.json
+          git diff --cached --exit-code || git commit -m "Update sosovalue analysis results"
           git add */linkedin.json
+          git diff --cached --exit-code || git commit -m "Update linkedin analysis results"
           git add */twitter.json
+          git diff --cached --exit-code || git commit -m "Update twitter analysis results"
           git add */scv_results.json
+          git diff --cached --exit-code || git commit -m "Update scv analysis results"
           git add */stablecoin_results.json
-          git commit -m "Update social analysis results"
+          git diff --cached --exit-code || git commit -m "Update stablecoin analysis results"
           git push
