--- a/.github/workflows/workflow-test.yml
+++ b/.github/workflows/workflow-test.yml
@@ -1,15 +1,30 @@
 ---
 name: Workflow test
 
-on:
-  workflow_run:
-    workflows: [YAML Lint Check]
-    branches: [dev]
-    types:
-      - completed
+"on":
+  push:
+    branches:
+      - "dev"
 
 jobs:
+  yaml-format-check:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.x"
+
+      - name: Install yamllint
+        run: pip install yamllint
+
+      - name: Run yamllint
+        run: yamllint .
+
   run_analysis:
+    needs: yaml-format-check
     runs-on: ubuntu-latest
     permissions:
       contents: write
