--- a/.github/workflows/workflow-test.yml
+++ b/.github/workflows/workflow-test.yml
@@ -54,13 +54,20 @@ jobs:
       - name: Install Poppler
         run: sudo apt-get install -y poppler-utils
 
+      # Install Tesseract OCR
+      - name: Install Tesseract OCR
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y tesseract-ocr
+          sudo apt-get install -y libtesseract-dev
+
       - name: Install from private repository
         run: |
           pip install git+https://$GITHUB_TOKEN:x-oauth-basic@github.com/insightic/pyinsightic.git#egg=pyinsightic
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN_SECRET }}
 
-      - name: Run pyinsightic SosoValue analysis
+      - name: Run pyinsightic analysis
         run: |
           for dir in */ ; do
           # if [[ "$dir" == "tusd/" || "$dir" == "usde/" ]]; then
