replaced test folders

--- a/.github/workflows/workflow-test.yml
+++ b/.github/workflows/workflow-test.yml
@@ -1,10 +1,8 @@
 ---
 name: Workflow test
 
-"on":
-  push:
-    branches:
-      - "dev"
+on:
+  workflow_dispatch:
 
 jobs:
   yaml-format-check:
@@ -89,9 +87,9 @@ jobs:
           git diff --cached --exit-code || git commit -m "Update linkedin analysis results"
           git add */twitter.json
           git diff --cached --exit-code || git commit -m "Update twitter analysis results"
-          git add */scv_results.json
+          git add */scv.json
           git diff --cached --exit-code || git commit -m "Update scv analysis results"
-          git add */stablecoin_results.json
+          git add */stablecoin.json
           git diff --cached --exit-code || git commit -m "Update stablecoin analysis results"
           git add */security_assessment.json
           git diff --cached --exit-code || git commit -m "Update security assessment analysis results"
