added branch name

--- a/.github/workflows/workflow-test.yml
+++ b/.github/workflows/workflow-test.yml
@@ -3,7 +3,11 @@ name: Workflow test
 
 on:
   workflow_dispatch:
-
+    inputs:
+      branch:
+        description: 'Branch name to run the workflow on'
+        required: true
+        default: 'dev'
 jobs:
   yaml-format-check:
     runs-on: ubuntu-latest
