removed usdn, updated smart contracts

--- a/stablecoin/pyusd/data.yml
+++ b/stablecoin/pyusd/data.yml
@@ -6,7 +6,7 @@ rating: A-
 links:
   website: https://www.paypal.com/pyusd
   twitter: https://twitter.com/PayPal
-whitepaper:
+whitepaper: https://crypto.com/university/what-is-pyusd-paypal-stablecoin
 security_report: https://github.com/paxosglobal/pyusd-contract/blob/master/audit-reports/Trail_of_Bits_Audit_Report.pdf
 attestation_report:
 overview: |
@@ -148,7 +148,7 @@ security_and_compliance:
       - title: Technical Documents
         value:
       - title: Smart Contract
-        value: https://github.com/paxosglobal/pyusd-contract
+        value: https://etherscan.io/address/0xe17b8adf8e46b15f3f9ab4bb9e3b6e31db09126e#code
       - title: Token launch
         value: |
           * Ethereum: 0x6c3ea9036406852006290770bedfcaba0e23a0e8
