--- a/stablecoin/xsgd/data.yml
+++ b/stablecoin/xsgd/data.yml
@@ -135,7 +135,7 @@ security_and_compliance:
       - title: Technical Documents
         value: https://docs.straitsx.com/
       - title: Smart Contract
-        value: https://github.com/Xfers/StraitsX-tokens/tree/master/Ethereum
+        value: https://etherscan.io/address/0x2e21613c4eed4a5af1e9223edcfc8640138da7fb#code
       - title: Token launch
         value: |
           * Ethereum: 0x70e8de73ce538da2beed35d14187f6959a8eca96
