updated whitepaper for DAI

--- a/stablecoin/dai/data.yml
+++ b/stablecoin/dai/data.yml
@@ -11,7 +11,7 @@ links:
   github: https://github.com/makerdao
   telegram: https://t.me/makerdao
   linkedin: https://www.linkedin.com/company/makerdao
-whitepaper: https://makerdao.com/whitepaper
+whitepaper: https://makerdao.com/en/whitepaper/
 security_report: https://github.com/makerdao/mcd-security/blob/master/Audit%20Reports/TOB_MakerDAO_Final_Report.pdf
 attestation_report:
 overview: |
