test scv for dai

--- a/.github/workflows/workflow-test.yml
+++ b/.github/workflows/workflow-test.yml
@@ -83,6 +83,10 @@ jobs:
         run: |
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "GitHub Actions"
+
+          # Checkout the gh-pages branch or create it if it doesn't exist
+          git checkout gh-pages || git checkout -b gh-pages
+
           shopt -s globstar
           FILES_TO_COMMIT=""
           for FILE_PATTERN in **/sosovalue.json **/linkedin.json **/twitter.json **/smartcontractvalidator.json **/stablecoin.json **/securityassessment.json; do
@@ -92,11 +96,14 @@ jobs:
               echo "No files matching $FILE_PATTERN to commit."
             fi
           done
+
           if [ -n "$FILES_TO_COMMIT" ]; then
             echo "Adding files to commit: $FILES_TO_COMMIT"
             git add $FILES_TO_COMMIT
+
+            # Commit and push to the gh-pages branch
             git commit -m "Update analysis results"
-            git push
+            git push origin gh-pages
           else
             echo "No changes to commit."
           fi
